testsuite/tests/deriving/should_fail/T21087.stderr

T21087.hs:11:25: error: [GHC-97044]
    • Class ‘KnownNat’ does not support user-specified instances.
    • In the stand-alone deriving instance for ‘KnownNat Z’
